[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
aws-encryption-sdk = "^3.3.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
